config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit DIY Theme",
+    "title": "The supplements you need",
     "path_prefix": "/",
     "description": "A \"do it yourself\" theme for Stackbit",
     "layout": "boxed",
