--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
     "header": {
         "title": "DIY",
         "logo": "images/classic/logo.svg",
-        "has_primary_nav": false,
+        "has_primary_nav": true,
         "primary_nav_links": [
             {
                 "label": "Features",
