--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "description": "A \"do it yourself\" theme for Stackbit",
     "layout": "boxed",
     "style": "bold",
-    "palette": "green",
+    "palette": "red",
     "mode": "light",
     "base_font": "serif",
     "header": {
